--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -11,15 +11,30 @@
     .nav-bar{
         padding: 30px 0px;
         justify-content: space-around;
+        align-items: flex-start;
     }
 
-    .nav-items{
+    .nav .nav-menu{
         display: none;
-        position: absolute;
-        background-color: #f1f1f1;
-        min-width: 160px;
     }
-    .nav-bar .nav-bar-ico{
+
+    .nav .mobile-nav-menu{
+        display: flex;
+        flex-direction: column;
+        flex: end;
+    }
+    .nav .mobile-nav-menu{
+        visibility: hidden;
+    }
+
+    .nav{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: end;
+    }
+
+    .nav .nav-bar-ico{
         display: inline-block;
         padding-left: 10px;
         width: 30px;
@@ -29,9 +44,8 @@
         font-size: 25px;
     }
 
-    .nav-bar-ico:hover .nav-items{
-        display: flex;
-        flex-direction: column;
+    .nav .nav-bar-ico:hover .nav .mobile-nav-menu{
+        visibility:visible;
     }
 
     .banner{
